Ajustando casos de teste